[package]
name = "cosmoline"
version = "0.1.1"
edition = "2018"
authors = ["Alex Zepeda <github@inferiorhumanorgans.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = { version = "0.4.0" }
env_logger = "0.8.4"

chrono = { version = "0.4", features = ["serde"] }
clap = "2"
handlebars = "4.0.1"
regex = "1.5"
rustc-demangle = "0.1"
semver = "1.0.3"
